--- a/templates/vote/vote.html
+++ b/templates/vote/vote.html
@@ -19,10 +19,10 @@
                 <div class="col-md-8">
 
                     <div class="row ">
-                        <div class="col-md-2 pt-2">
+                        <div class="col-sm-2 col-4 pt-2">
                             {{ form.design|as_crispy_field }}
                         </div>
-                        <div class="pt-2 col-sm-2">
+                        <div class="pt-2 col-sm-2 col-4">
                             {{ form.balance|as_crispy_field }}
                         </div>
                         <div class="col-sm-2 col-4 pt-2">
