--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -62,31 +62,35 @@
                                             </h2>
                                             <div id="acc_{{ vote.id }}" class="accordion-collapse collapse"
                                                  data-bs-parent="#accordionExample">
-                                                <table class="table">
-                                                    <thead>
-                                                    <tr>
-                                                        <th scope="col">Дизайн</th>
-                                                        <th scope="col">Баланс</th>
-                                                        <th scope="col">Реализация</th>
-                                                        <th scope="col">Ошибки</th>
-                                                        <th scope="col">Идея</th>
-                                                        <th scope="col">Итого</th>
-                                                    </tr>
-                                                    </thead>
-                                                    <tbody>
-                                                    <tr>
-                                                        <td>{{ vote.design }}/10</td>
-                                                        <td>{{ vote.balance }}/10</td>
-                                                        <td>{{ vote.realisation }}/10</td>
-                                                        <td>{{ vote.mistakes }}/5</td>
-                                                        <td>{{ vote.idea }}/5</td>
-                                                        <td>{{ vote.result }}/45</td>
-                                                    </tr>
-                                                    <tr>
-                                                    </tbody>
-                                                </table>
+                                                <div class="table-responsive">
+                                                    <table class="table">
+                                                        <thead>
+                                                        <tr>
+                                                            <th scope="col">Дизайн</th>
+                                                            <th scope="col">Баланс</th>
+                                                            <th scope="col">Реализация</th>
+                                                            <th scope="col">Ошибки</th>
+                                                            <th scope="col">Идея</th>
+                                                            <th scope="col">Итого</th>
+                                                        </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                        <tr>
+                                                            <td>{{ vote.design }}/10</td>
+                                                            <td>{{ vote.balance }}/10</td>
+                                                            <td>{{ vote.realisation }}/10</td>
+                                                            <td>{{ vote.mistakes }}/5</td>
+                                                            <td>{{ vote.idea }}/5</td>
+                                                            <td>{{ vote.result }}/45</td>
+                                                        </tr>
+                                                        <tr>
+                                                        </tbody>
+                                                    </table>
+                                                </div>
 
                                                 <div class="accordion-body">
+
+
                                                     <p class="fs-5">
                                                         Комментарий:</p>
                                                     {{ vote.comment }}
