--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -93,7 +93,7 @@
 
                                                     <p class="fs-5">
                                                         Комментарий:</p>
-                                                    {{ vote.comment }}
+                                                    {{ vote.comment |linebreaks }}
                                                 </div>
                                             </div>
                                         </div>
