--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -7,18 +7,18 @@
     <div class="container">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
-                {% if stage != 1 %}
+                {% if stage.id != 1 %}
 
                     <li class="page-item"><a class="page-link" href="?stage=1">&laquo; Первый</a></li>
-                    <li class="page-item"><a class="page-link" href="?stage={{ stage|add:"-1" }}">Предыдущий</a></li>
+                    <li class="page-item"><a class="page-link" href="?stage={{ stage.id|add:"-1" }}">Предыдущий</a></li>
                 {% endif %}
 
                 <li class="page-item disabled">
-                    <a class="page-link">Раунд {{ stage }} из {{ stages }}</a>
+                    <a class="page-link">Раунд {{ stage.id }} из {{ stages }}</a>
                 </li>
 
-                {% if stage < stages %}
-                    <li class="page-item"><a class="page-link" href="?stage={{ stage|add:"1" }}">Следующий</a></li>
+                {% if stage.id < stages %}
+                    <li class="page-item"><a class="page-link" href="?stage={{ stage.id|add:"1" }}">Следующий</a></li>
                     <li class="page-item"><a class="page-link" href="?stage={{ stages }}">Последний &raquo;</a></li>
                 {% endif %}
             </ul>
@@ -26,6 +26,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center fw-bolder">Список карт и оценок к ним</h1>
+                <h2 class="text-center fw-bolder">Тема: {{ stage.theme }}</h2>
 
                 <div class="row justify-content-center">
                     {% for card in cards %}
