--- a/templates/vote/hidden.html
+++ b/templates/vote/hidden.html
@@ -4,27 +4,27 @@
 
 {% block content %}
     <div class="container">
-    <nav aria-label="Page navigation example">
-    <ul class="pagination justify-content-center">
-        {% if stage != 1 %}
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                {% if stage.id != 1 %}
 
-            <li class="page-item"><a class="page-link" href="?stage=1">&laquo; Первый</a></li>
-            <li class="page-item"><a class="page-link" href="?stage={{ stage|add:"-1" }}">Предыдущий</a></li>
-        {% endif %}
+                    <li class="page-item"><a class="page-link" href="?stage=1">&laquo; Первый</a></li>
+                    <li class="page-item"><a class="page-link" href="?stage={{ stage.id|add:"-1" }}">Предыдущий</a></li>
+                {% endif %}
 
-        <li class="page-item disabled">
-            <a class="page-link">Раунд {{ stage }} из {{ stages }}</a>
-        </li>
+                <li class="page-item disabled">
+                    <a class="page-link">Раунд {{ stage.id }} из {{ stages }}</a>
+                </li>
 
-        {% if stage < stages %}
-            <li class="page-item"><a class="page-link" href="?stage={{ stage|add:"1" }}">Следующий</a></li>
-            <li class="page-item"><a class="page-link" href="?stage={{ stages }}">Последний &raquo;</a></li>
-        {% endif %}
-    </ul>
-</nav>
+                {% if stage.id < stages %}
+                    <li class="page-item"><a class="page-link" href="?stage={{ stage.id|add:"1" }}">Следующий</a></li>
+                    <li class="page-item"><a class="page-link" href="?stage={{ stages }}">Последний &raquo;</a></li>
+                {% endif %}
+            </ul>
+        </nav>
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center fw-bolder">Текущего раунда не существует или он недоступен вам</h1>
+            </div>
         </div>
-    </div>
 {% endblock %}
