--- a/templates/homepage/index.html
+++ b/templates/homepage/index.html
@@ -24,7 +24,8 @@
                                     aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                            <input type="checkbox" class="form-check-input" id="flexCheckDefault" onClick="toggle(this)"/>
+                            <input type="checkbox" class="form-check-input" id="flexCheckDefault"
+                                   onClick="toggle(this)"/>
                             <label class="form-check-label" for="flexCheckDefault">
                                 Выбрать все
                             </label>
