--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -3,7 +3,8 @@
         {% if page_obj.has_previous %}
 
             <li class="page-item"><a class="page-link" href="?page=1">&laquo; Первая</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
+            </li>
         {% endif %}
 
         <li class="page-item disabled">
@@ -12,7 +13,8 @@
 
         {% if page_obj.has_next %}
             <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Следующая</a></li>
-            <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Последняя &raquo;</a></li>
+            <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">Последняя
+                &raquo;</a></li>
         {% endif %}
     </ul>
 </nav>
