--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -41,7 +41,7 @@
 
                                 <h3>{{ card.name }}</h3>
 
-                                <div class="accordion" id="accordionFlushExample">
+                                <div class="accordion" id="accordionFlushExample_{{ card.id }}">
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button"
@@ -51,7 +51,7 @@
                                             </button>
                                         </h2>
                                         <div id="flush-collapseOne" class="accordion-collapse collapse"
-                                             data-bs-parent="#accordionFlushExample">
+                                             data-bs-parent="#accordionFlushExample_{{ card.id }}">
                                             <div class="accordion-body">
                                                 <div class="row">
                                                     {% if card.tokens.first %}
