--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -45,12 +45,12 @@
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne"
-                                                    aria-expanded="false" aria-controls="flush-collapseOne">
+                                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne_{{ card.id }}"
+                                                    aria-expanded="false" aria-controls="flush-collapseOne_{{ card.id }}">
                                                 От автора карты
                                             </button>
                                         </h2>
-                                        <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                        <div id="flush-collapseOne_{{ card.id }}" class="accordion-collapse collapse"
                                              data-bs-parent="#accordionFlushExample_{{ card.id }}">
                                             <div class="accordion-body">
                                                 <div class="row">
