--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -45,8 +45,10 @@
                                     <div class="accordion-item">
                                         <h2 class="accordion-header">
                                             <button class="accordion-button collapsed" type="button"
-                                                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne_{{ card.id }}"
-                                                    aria-expanded="false" aria-controls="flush-collapseOne_{{ card.id }}">
+                                                    data-bs-toggle="collapse"
+                                                    data-bs-target="#flush-collapseOne_{{ card.id }}"
+                                                    aria-expanded="false"
+                                                    aria-controls="flush-collapseOne_{{ card.id }}">
                                                 От автора карты
                                             </button>
                                         </h2>
@@ -133,6 +135,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <hr class="hr hr-blurry"/>
                                     {% endfor %}
                                 </div>
                             </div>
