--- a/templates/cards/list.html
+++ b/templates/cards/list.html
@@ -6,18 +6,19 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-            
-        <div class="d-grid mx-auto">
-            <label class="form-label"> </label>
-            <a class="btn btn-outline-primary" href="{% url 'cards:create_card' %}">Новая
-                карта</a>
-        </div>
-        <div class="d-grid mx-auto">
-            <label class="form-label"> </label>
-            <a class="btn btn-outline-primary" href="{% url 'cards:create_card_from_file_step_1' %}">Новая
-                карта из файла</a>
-        </div>
-                <h1 class="text-center fw-bolder">Список карт (Устаревшая часть сайта. Используйте главную страницу)</h1>
+
+                <div class="d-grid mx-auto">
+                    <label class="form-label"> </label>
+                    <a class="btn btn-outline-primary" href="{% url 'cards:create_card' %}">Новая
+                        карта</a>
+                </div>
+                <div class="d-grid mx-auto">
+                    <label class="form-label"> </label>
+                    <a class="btn btn-outline-primary" href="{% url 'cards:create_card_from_file_step_1' %}">Новая
+                        карта из файла</a>
+                </div>
+                <h1 class="text-center fw-bolder">Список карт (Устаревшая часть сайта. Используйте главную
+                    страницу)</h1>
 
                 <div class="row justify-content-center">
                     {% for card in cards %}
@@ -32,7 +33,8 @@
 
                                 <h4>{{ card.name }}</h4>
                                 <p class="fs-5">
-                                    ({{ card.mana }}) {% if card.attack %}{{ card.attack }}/{{ card.health }}{% endif %}</p>
+                                    ({{ card.mana }})
+                                    {% if card.attack %}{{ card.attack }}/{{ card.health }}{% endif %}</p>
                                 <p class="fs-6">{{ card.text }}</p>
 
                                 <a class="btn btn-outline-secondary"
