--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -14,7 +14,7 @@
             </li>
             <li>
                 <a class="nav-link {% if request.path == '/vote/' %} fw-bold {% endif %} link-dark "
-                   href="{% url 'vote:list_round' %}">BB24</a>
+                   href="{% url 'vote:list_round' %}">Workshop Rumble</a>
             </li>
 
             {% if user.is_authenticated %}
