--- a/templates/vote/list.html
+++ b/templates/vote/list.html
@@ -110,21 +110,21 @@
                                                         <table class="table">
                                                             <thead>
                                                             <tr>
-                                                                <th scope="col">Дизайн</th>
                                                                 <th scope="col">Баланс</th>
-                                                                <th scope="col">Реализация</th>
-                                                                <th scope="col">Ошибки</th>
+                                                                <th scope="col">Внешний вид</th>
                                                                 <th scope="col">Идея</th>
+                                                                <th scope="col">Соответствие теме</th>
+                                                                <th scope="col">Видение в игре</th>
                                                                 <th scope="col">Итого</th>
                                                             </tr>
                                                             </thead>
                                                             <tbody>
                                                             <tr>
-                                                                <td>{{ vote.design }}/10</td>
                                                                 <td>{{ vote.balance }}/10</td>
-                                                                <td>{{ vote.realisation }}/10</td>
-                                                                <td>{{ vote.mistakes }}/5</td>
-                                                                <td>{{ vote.idea }}/5</td>
+                                                                <td>{{ vote.design }}/10</td>
+                                                                <td>{{ vote.idea }}/10</td>
+                                                                <td>{{ vote.theme_like }}/5</td>
+                                                                <td>{{ vote.in_game }}/5</td>
                                                                 <td>{{ vote.result }}/45</td>
                                                             </tr>
                                                             <tr>
