--- a/templates/vote/vote.html
+++ b/templates/vote/vote.html
@@ -40,19 +40,19 @@
             </div>
             <div class="row ">
                 <div class="col-sm-2 col-4 pt-2">
-                    {{ form.design|as_crispy_field }}
-                </div>
-                <div class="pt-2 col-sm-2 col-4">
                     {{ form.balance|as_crispy_field }}
                 </div>
-                <div class="col-sm-2 col-4 pt-2">
-                    {{ form.realisation|as_crispy_field }}
-                </div>
-                <div class="col-sm-2 col-4 pt-2">
-                    {{ form.mistakes|as_crispy_field }}
+                <div class="pt-2 col-sm-2 col-4">
+                    {{ form.design|as_crispy_field }}
                 </div>
                 <div class="col-sm-2 col-4 pt-2">
                     {{ form.idea|as_crispy_field }}
+                </div>
+                <div class="col-sm-2 col-4 pt-2">
+                    {{ form.theme_like|as_crispy_field }}
+                </div>
+                <div class="col-sm-2 col-4 pt-2">
+                    {{ form.in_game|as_crispy_field }}
                 </div>
                 <div class="col-sm-2 col-4 pt-2">
                     <label for="result" class="form-label">Итог:</label>
